--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-
-  <title>IFSC 3342 | Ben Weisenfelder</title>
-  <meta name="description" content="Keyword Rich Description">
-  <meta name="author" content="Benjamin Weisenfelder">
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Homepage for Assignments" />
+    <title>Ben Weisenfelder Course Homepage</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anta&family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
-
 <body>
-  <h1>Ben Weisenfelder</h1>
+    <h1>Ben Weisenfelder</h1>
+    <nav>
+        <ul>
+            <li><a href="preassessment/index.html">PreAssessment</a></li>
+            <li><a href="html5-semantics/">HTML5 Semantics</a></li>
+            <li><a href="grid/index.html">Grid</a></li>
+            <li><a href="css-grid-exercise-1/index.html">Grid w/subgrid</a></li>
+            <li><a href="resume/index.html">Resume Project</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
