--- a/html5-semantics/index.html
+++ b/html5-semantics/index.html
@@ -5,7 +5,7 @@
 <title>Out with the old...</title>
 <link rel="stylesheet" href="path-to-style.css">
 <meta name="description" content="We are going to refine this document down to a good starting point for all html5 projects moving forward." />
-<meta name="author" content="Ethan Miller" />
+<meta name="author" content="Ben Weisenfelder" />
 <link rel="shortcut icon" href="/favicon.ico" />
 </head>
 <body>
@@ -88,7 +88,7 @@
 </section>
   <!--#content -->
   <footer class="primary">
-    <p>&copy; 2024 <a href="#">Ethan Miller</a></p>
+    <p>&copy; 2024 <a href="#">Ben Weisenfelder</a></p>
   </footer>
 </main>
 <!--.container -->
