--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Ben Weisenfelder" />
     <meta name="description" content="Homepage for Assignments" />
     <title>Ben Weisenfelder Course Homepage</title>
     <link rel="stylesheet" href="assets/css/style.css">
