small resume updates

--- a/resume/index.html
+++ b/resume/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Resume Project</title>
   <link rel="stylesheet" href="assets/css/style.css">
-  <meta name="description" content="">
+  <meta name="description" content="Resume Project for Mobile Web Development">
   <meta name="author" content="Ben Weisenfelder"
 
   <meta property="og:title" content="">
@@ -116,7 +116,7 @@
             <span itemprop="name">Altitude Trampoline Park</span>
         <a itemprop="url" href="https://www.altitudetrampolinepark.com">Altitude Website</a>
         <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-              <span itemprop="addressLocality">7415 Lindsey Rd, Little Rock, AR 72206</span>
+              <span itemprop="addressLocality">15707 Chenal Pkwy, Little Rock, AR 72211</span>
         </span>
         </span>
         <div itemscope itemtype="https://schema.org/EmployeeRole">
