Tablet View Media Queries

--- a/resume/index.html
+++ b/resume/index.html
@@ -23,6 +23,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Madimi+One&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
 <body>
@@ -77,9 +78,9 @@
   
       </dl>
       <ul class="related-links">
-        <li><a itemprop="url" rel="me" href="https://github.com/EnderBenXIII"> github</a></li>
-        <li><a itemprop="url" rel="me" href="https://twitter.com/enderbenxiii">twitter</a></li>
-        <li><a itemprop="url" rel="me" href="https://www.twitch.tv/enderbenxiii">twitch</a></li>
+        <li><a itemprop="url" rel="me" href="https://github.com/EnderBenXIII"><i class="fa fa-brands fa-github"></i>github</a></li>
+        <li><a itemprop="url" rel="me" href="https://twitter.com/enderbenxiii"><i class="fa fa-brands fa-x-twitter"></i>twitter</a></li>
+        <li><a itemprop="url" rel="me" href="https://www.twitch.tv/enderbenxiii"><i class="fa fa-brands fa-twitch"></i>twitch</a></li>
       </ul>
     </section>
     <section id="skills">
