--- a/resume/index.html
+++ b/resume/index.html
@@ -30,12 +30,10 @@
   <header class="container" id="top">
     <!-- Main navigation -->
     <nav class="primary">
-    <ul>  
-      <li><a href="#about">About</a></li>
-      <li><a href="#skills">Skills</a></li>
-      <li><a href="#experience">Experience</a></li>
-      <li><a href="#education">Education</a></li>
-     </ul>  
+      <a href="#about">About</a>
+      <a href="#skills">Skills</a>
+      <a href="#experience">Experience</a>
+      <a href="#education">Education</a>
     </nav>
   </header>
   <!-- Main -->
@@ -158,7 +156,6 @@
       &copy; 2024 Ben Weisenfelder | <a href="#top">Back to Top</a>
     </div>
   </footer>
-  <script src="assets/js/script.js"></script>
 </body>
 
 </html>
