Updated flexbox code to work properly

--- a/resume/index.html
+++ b/resume/index.html
@@ -43,7 +43,7 @@
     <section id="about">
       <h2 class="visuallyhidden">Personal Details</h2>
       <div class="bio">
-      <img itemprop="image" src="assets/img/selfp.jpg" alt="Ben Weisenfelder">
+      <img itemprop="image" src="assets/img/selfp.jpg" alt="Ben Weisenfelder" class="headshot">
       <p itemprop="description">Benjamin Weisenfelder is a junior web developer currently in their 3rd year of college, they also participate in and help organize eSports events statewide.</p>
       </div>  
       <dl class="details">
@@ -109,7 +109,7 @@
         </div>
       </article>
       <!-- Previous Jobs - Notice Slightly Different Format-->
-      <article class="job" itemscope itemtype="http://schema.org/Organization">
+      <article class="job" itemscope itemtype="http://schema.org/Job">
         <h3 itemprop="name">Court Monitor</h3>
         <span itemprop="location" itemscope itemtype="http://schema.org/Place">
             <span itemprop="name">Altitude Trampoline Park</span>
@@ -124,7 +124,7 @@
         </div>
         <p itemprop="description">Enforced safety rules while simultaneously upholding excellent customer service. Was also responsible for cleaning and helping maintain the trampolines, the pads, and the park.</p>
       </article>
-     <article class="job" itemscope itemtype="http://schema.org/Organization">
+     <article class="job" itemscope itemtype="http://schema.org/Job">
         <h3 itemprop="name">Junior Estimator</h3>
         <span itemprop="location" itemscope itemtype="http://schema.org/Place">
             <span itemprop="name">Interstate Signways</span>
@@ -151,7 +151,7 @@
     </section>
   </main>
   <!-- Footer -->
-  <footer>
+  <footer class="primary">
     <div id="copyright">
       &copy; 2024 Ben Weisenfelder | <a href="#top">Back to Top</a>
     </div>
