Added Media Queries for Desktop View

--- a/resume/index.html
+++ b/resume/index.html
@@ -91,6 +91,7 @@
       </ul>
       
     </section>
+    <div class="exp">
     <section id="experience">
       <h2>Experience</h2>
       <!-- current job -->
@@ -149,6 +150,7 @@
         <span>2017-2019</span>
       </article>
     </section>
+    </div>
   </main>
   <!-- Footer -->
   <footer class="primary">
